deploy/namespaces/medplum/netpol/04-allow-postgres-redis-ingress-from-medplum.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-ingress-from-medplum
  namespace: medplum
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: medplum
    ports:
    - {protocol: TCP, port: 5432}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-ingress-from-medplum
  namespace: medplum
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: medplum
    ports:
    - {protocol: TCP, port: 6379}
