deploy/namespaces/medplum/netpol/06-medplum-allow-medplum-egress-to-postgres-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-medplum-egress-to-postgres-redis
  namespace: medplum
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: medplum
  policyTypes: ["Egress"]
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: postgresql
    ports:
    - {protocol: TCP, port: 5432}
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: redis
    ports:
    - {protocol: TCP, port: 6379}
