deploy/namespaces/medplum/netpol/10-medplum-allow-airflow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: medplum-allow-airflow
  namespace: medplum
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: airflow
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 8103
